--- a/src/renderer/src/pages/SignInPage.css
+++ b/src/renderer/src/pages/SignInPage.css
@@ -116,9 +116,9 @@
   flex: 1.5;
   position: relative;
   overflow: hidden;
-  display: flex; /* Added for centering */
-  justify-content: center; /* Added for centering */
-  align-items: center; /* Added for centering */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .right-side img {
@@ -142,13 +142,16 @@
 
 .logo {
   position: absolute;
-  width: 40px;
-  height: 40px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   object-fit: contain;
   filter: drop-shadow(0 4px 12px rgba(255, 255, 255, 0.3))
     drop-shadow(0 0 2px rgba(255, 255, 255, 0.9)) drop-shadow(0 0 4px rgba(255, 255, 255, 0.5));
   z-index: 2;
   animation: logoGlow 2s ease-out forwards;
+  width: 600px;
+  height: auto;
 }
 
 @keyframes logoGlow {
