added call_number in table add and edit modal and in table

--- a/src/renderer/src/components/Books/components/BooksTable.css
+++ b/src/renderer/src/components/Books/components/BooksTable.css
@@ -23,7 +23,8 @@
   .col-physicalDescription,
   .col-placeOfPublication,
   .col-subject,
-  .col-processedBy {
+  .col-processedBy,
+  .col-callNumber {
     display: none;
   }
 }
