--- a/src/renderer/src/pages/SignUpPage.css
+++ b/src/renderer/src/pages/SignUpPage.css
@@ -34,6 +34,32 @@
   margin: 0 auto;
 }
 
+.right-side {
+  width: 50%;
+  position: relative;
+  overflow: hidden;
+}
+
+.right-side img:first-child {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.right-side .logo {
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  right: 100%;
+  transform: translate(-50%, -50%);
+  width: 800px;
+  max-width: 100%;
+  height: auto;
+  z-index: 2;
+  display: block;
+  margin: 0 auto;
+}
+
 /* ...rest of the styles from SignInPage.css... */
 
 .password-requirements {
